# med-graph-rag-closed

./: .gitignore  AWS_BOM.md  CACHEING.md  CLINICIAN_PITCH.md  CLINICIAN_README.md  CONFIDENCE.md  GENE_PROTEIN_INTEGRATION.md  LOCAL_DEVELOPMENT.md  MONETIZE.md  OUCH.md  PROJECT_STATUS.md  QUICK_START_LOCAL.md  README.md  TECH_CHAT.md  UV_GUIDE.md  data-flow-architecture.md  desc2025.xml  docker-compose.yml  graph_query_language.py  knowledge_graph_schema.md  llm_query_generation_prompt.md  medical_papers_client.py  pyproject.toml  queries.py  query_demo.py  query_generator.py  regen-jsonl.sh  reproduce_client_bug.py  test_opensearch_connection.py  verify_init.py
cdk/: CDK_SETUP.md  README.md  app.py
src/: mcp_server.py
src/api/: README.md  main.py
src/client/: README.md  medical_papers_client.py
src/ingestion/: README.md  batch_processor.py  embedding_cache.py  embedding_generator.py  extractor.py  hack_scispacy.py  hybrid_extractor.py  jats_parser.py  load_hgnc_genes.py  multihop_query.py  parallel_processor.py  pipeline.py  query_index.py  s3_writer.py  test_ingestion.py  triple_hop_query.py
src/schema/: entity.py  relationship.py
src/scripts/: README.md  debug_gene_loading.py  download_mesh.py  download_papers.py  download_umls.py  find_problematic_gene_names.py  hgnc_parser.py  merge_entities.py  mesh_parser.py  test_queries.py
tests/: README.md
