[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med-graph-rag"
version = "0.1.0"
description = "Medical Research Knowledge Graph RAG System"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    # OpenSearch
    "opensearch-py>=2.4.0",
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    # XML parsing
    "lxml>=5.0.0",
    # HTTP requests
    "requests>=2.31.0",
    "httpx>=0.26.0",
    # AWS SDK
    "aioboto3>=12.3.0",
    "pytest>=9.0.1",
    "black>=25.11.0",
    "ruff>=0.14.7",
]

[project.scripts]
pubmed-graph-rag = "src.mcp_server:main"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",

    # Code quality
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
